src/solver/tests/logical_solver/puzzles/snapshots/lisudoku_solver__solver__tests__logical_solver__puzzles__renban_6x6__check_renban_6x6_1_solve.snap
---
source: src/solver/tests/logical_solver/puzzles/renban_6x6.rs
expression: result.steps
snapshot_kind: text
---
- rule: Candidates
  cells: []
  values: []
  areas: []
  affectedCells: []
  grid: ~
  candidates:
    - - - 2
        - 3
        - 5
        - 6
      - - 2
        - 3
        - 4
        - 5
        - 6
      - - 2
        - 3
        - 4
        - 5
        - 6
      - - 2
        - 3
        - 4
        - 5
      - - 3
        - 4
        - 5
      - []
    - - - 1
        - 2
        - 3
        - 5
      - - 1
        - 2
        - 3
        - 4
        - 5
      - - 1
        - 2
        - 3
        - 4
        - 5
      - - 2
        - 3
        - 4
        - 5
      - []
      - - 2
        - 3
        - 4
        - 5
    - - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 5
      - - 3
        - 4
        - 5
        - 6
    - - - 1
        - 3
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 5
        - 6
      - []
      - - 3
        - 4
        - 5
        - 6
    - - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 4
        - 5
        - 6
      - - 1
        - 3
        - 4
        - 5
      - - 2
        - 3
        - 4
        - 5
        - 6
    - - []
      - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 2
        - 3
        - 5
        - 6
      - - 1
        - 3
        - 5
      - - 2
        - 3
        - 5
        - 6
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 1
    - 3
  areas:
    - Renban: 3
  affectedCells:
    - row: 2
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 1
    - 3
    - 5
    - 6
  areas:
    - Renban: 6
  affectedCells:
    - row: 3
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 1
  values:
    - 4
  areas: []
  affectedCells:
    - row: 3
      col: 2
    - row: 3
      col: 3
    - row: 3
      col: 5
    - row: 0
      col: 1
    - row: 1
      col: 1
    - row: 2
      col: 1
    - row: 2
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
    - 6
  areas:
    - Renban: 0
  affectedCells:
    - row: 0
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
  areas:
    - Renban: 0
  affectedCells:
    - row: 1
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
    - 6
  areas:
    - Renban: 0
  affectedCells:
    - row: 2
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 1
    - 2
    - 3
    - 5
    - 6
  areas:
    - Renban: 4
  affectedCells:
    - row: 4
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 3
  values:
    - 4
  areas: []
  affectedCells:
    - row: 4
      col: 4
    - row: 4
      col: 5
    - row: 0
      col: 3
    - row: 1
      col: 3
    - row: 2
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
  areas:
    - Renban: 2
  affectedCells:
    - row: 0
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 3
    - 5
  areas:
    - Renban: 7
  affectedCells:
    - row: 4
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
    - 6
  areas:
    - Renban: 7
  affectedCells:
    - row: 5
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
    - 6
  areas:
    - Renban: 7
  affectedCells:
    - row: 4
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 4
  values:
    - 1
  areas: []
  affectedCells:
    - row: 4
      col: 0
    - row: 4
      col: 1
    - row: 4
      col: 2
    - row: 2
      col: 4
    - row: 5
      col: 4
    - row: 5
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 3
  values:
    - 6
  areas:
    - Region: 5
  affectedCells:
    - row: 5
      col: 1
    - row: 5
      col: 2
    - row: 2
      col: 3
    - row: 3
      col: 3
    - row: 2
      col: 2
    - row: 3
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 1
    - 3
    - 5
  areas:
    - Renban: 4
  affectedCells:
    - row: 2
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 2
  values:
    - 2
  areas: []
  affectedCells:
    - row: 2
      col: 0
    - row: 2
      col: 1
    - row: 0
      col: 2
    - row: 1
      col: 2
    - row: 4
      col: 2
    - row: 5
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 1
    - 3
  areas:
    - Renban: 3
  affectedCells:
    - row: 3
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 1
      col: 0
  values:
    - 1
  areas:
    - Column: 0
  affectedCells:
    - row: 1
      col: 1
    - row: 1
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 5
      col: 4
  values:
    - 5
  areas:
    - Region: 5
  affectedCells:
    - row: 5
      col: 1
    - row: 5
      col: 2
    - row: 2
      col: 4
    - row: 3
      col: 3
    - row: 3
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 3
  areas:
    - Renban: 0
  affectedCells:
    - row: 2
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 1
  values:
    - 1
  areas: []
  affectedCells:
    - row: 2
      col: 3
    - row: 5
      col: 1
    - row: 3
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 3
  areas:
    - Renban: 4
  affectedCells:
    - row: 3
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 2
  values:
    - 3
  areas: []
  affectedCells:
    - row: 3
      col: 5
    - row: 0
      col: 2
    - row: 1
      col: 2
    - row: 4
      col: 2
    - row: 5
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 3
  values:
    - 1
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 2
  areas:
    - Renban: 1
  affectedCells:
    - row: 0
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 2
  values:
    - 1
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 0
      col: 3
    - row: 1
      col: 3
  values:
    - 2
  areas:
    - Column: 3
    - Region: 1
  affectedCells:
    - row: 1
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: LockedCandidatesPairs
  cells:
    - row: 2
      col: 0
    - row: 3
      col: 0
  values:
    - 5
  areas:
    - Region: 2
    - Column: 0
  affectedCells:
    - row: 4
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 6
  areas:
    - Renban: 6
  affectedCells:
    - row: 4
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 2
  values:
    - 5
  areas: []
  affectedCells:
    - row: 4
      col: 1
    - row: 0
      col: 2
    - row: 1
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 6
  areas:
    - Renban: 1
  affectedCells:
    - row: 0
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 2
  values:
    - 4
  areas: []
  affectedCells:
    - row: 1
      col: 5
    - row: 0
      col: 2
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 2
  values:
    - 6
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 4
  values:
    - 4
  areas:
    - Row: 0
  affectedCells:
    - row: 2
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 0
      col: 1
  values:
    - 5
  areas:
    - Column: 1
  affectedCells:
    - row: 0
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 4
      col: 1
  values:
    - 6
  areas:
    - Column: 1
  affectedCells:
    - row: 4
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: HiddenSingle
  cells:
    - row: 2
      col: 5
  values:
    - 4
  areas:
    - Column: 5
  affectedCells:
    - row: 2
      col: 4
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 2
  areas:
    - Renban: 2
  affectedCells:
    - row: 1
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 5
  areas:
    - Renban: 5
  affectedCells:
    - row: 3
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 3
  areas:
    - Renban: 5
  affectedCells:
    - row: 2
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 3
  values:
    - 5
  areas: []
  affectedCells:
    - row: 2
      col: 0
    - row: 1
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 4
  values:
    - 3
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 5
  values:
    - 6
  areas: []
  affectedCells:
    - row: 3
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 3
  values:
    - 3
  areas: []
  affectedCells:
    - row: 1
      col: 1
    - row: 1
      col: 5
    - row: 0
      col: 3
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 2
      col: 0
  values:
    - 6
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 3
      col: 0
  values:
    - 5
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: RenbanCandidates
  cells: []
  values:
    - 2
  areas:
    - Renban: 0
  affectedCells:
    - row: 0
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 0
  values:
    - 3
  areas: []
  affectedCells:
    - row: 4
      col: 0
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 0
      col: 3
  values:
    - 2
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 1
  values:
    - 2
  areas: []
  affectedCells:
    - row: 5
      col: 1
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 1
      col: 5
  values:
    - 5
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 0
  values:
    - 2
  areas: []
  affectedCells:
    - row: 4
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 1
  values:
    - 3
  areas: []
  affectedCells:
    - row: 5
      col: 5
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 4
      col: 5
  values:
    - 3
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
- rule: NakedSingle
  cells:
    - row: 5
      col: 5
  values:
    - 2
  areas: []
  affectedCells: []
  grid: ~
  candidates: ~
  invalidStateReason: ~
